<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_raptor_dbw_interface</name>
  <version>1.0.0</version>
  <description>The Autoware Interface for Raptor DBW controllers</description>
  <maintainer email="bso19a@fsu.edu">Boluwatife Olabiran</maintainer>
  <author email="bso19a@fsu.edu">Boluwatife Olabiran</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>autoware_cmake</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>nav_msgs</depend>
  <depend>can_msgs</depend>
  <depend>raptor_dbw_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>

  <depend>autoware_auto_control_msgs</depend>
<!--  <depend>autoware_auto_planning_msgs</depend>-->
  <build_depend>autoware_cmake</build_depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>autoware_auto_common</depend>
<!--  <depend>motion_utils</depend>-->
<!--  <depend>pure_pursuit</depend>-->
<!--  <depend>tier4_control_msgs</depend>-->
  <depend>tier4_vehicle_msgs</depend>
  <depend>vehicle_info_util</depend>
  <depend>time_utils</depend>
<!--  <depend>vehicle_interface</depend>-->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>autoware_testing</test_depend>

<!--  <exec_depend>ros2_socketcan</exec_depend>-->
  <exec_depend>kvaser_interface</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
